infrastructure/argocd/base/argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      hostname: argocd.ndomi.local
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      protocol: HTTPS
      port: 443
      hostname: argocd.ndomi.local
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls
            group: ""
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
