infrastructure/argocd/base/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: websecure
  hostnames:
    - argocd.ndomi.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
